--- a/src/styles/_wishlist.scss
+++ b/src/styles/_wishlist.scss
@@ -810,12 +810,6 @@
     display: flex;
     gap: var(--space-2);
     overflow-x: auto;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-
-    &::-webkit-scrollbar {
-      display: none;
-    }
   }
 
   &__thumb {
